--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   shared_preferences: ^2.3.2
   flutter_tts: ^4.0.2
+  dropdown_search: ^6.0.1
+  sensors_plus: ^6.1.0
 
 dev_dependencies:
   flutter_test:
