--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "frailtyapp",
-    "short_name": "frailtyapp",
+    "name": "StrideWell",
+    "short_name": "StrideWell",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Frailty Care Your Way",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
