--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: frailtyapp
-description: "A new Flutter project."
+name: StrideWell
+description: "Frailty Care Your Way"
 publish_to: 'none'
 version: 0.1.0
 
@@ -17,6 +17,8 @@ dependencies:
   dropdown_search: ^6.0.1
   sensors_plus: ^6.1.0
   http: ^1.2.2
+  flutter_launcher_icons: ^0.14.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +27,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - lib/image/icon.png
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/image/icon.png"
+  web:
+    generate: true
